# data

./: LICENSE  README.md  countries_full.json  country.json  gitmoji.json
coronavirus/virustrackerexports/: pyproject.toml  retrieveDataFromAPI.py  worldwilde.json
coronavirus/virustrackerexports/04-02-2020/: AM_timeline.json  AM_total.json  AO_total.json  AR_timeline.json  AR_total.json  AT_timeline.json  AZ_total.json  BA_timeline.json  BA_total.json  BE_total.json  BG_timeline.json  BI_timeline.json  BJ_total.json  BN_total.json  BO_total.json  BS_total.json  BT_total.json  BZ_timeline.json  CA_total.json  CF_total.json  CG_timeline.json  CG_total.json  CI_timeline.json  CL_timeline.json  CL_total.json  CM_total.json  CO_timeline.json  CO_total.json  CR_timeline.json  CU_timeline.json  CU_total.json  CY_timeline.json  CY_total.json  CZ_timeline.json  CZ_total.json  DE_timeline.json  DE_total.json  DJ_timeline.json  DJ_total.json  DK_timeline.json  (+130 more)
coronavirus/virustrackerexports/04-08-2020/: AE_timeline.json  AL_timeline.json  AM_timeline.json  AO_total.json  AT_total.json  AZ_timeline.json  BA_timeline.json  BA_total.json  BE_total.json  BI_timeline.json  BI_total.json  BO_timeline.json  BR_total.json  BS_total.json  BW_timeline.json  BZ_timeline.json  CA_timeline.json  CA_total.json  CD_timeline.json  CH_timeline.json  CI_timeline.json  CI_total.json  CM_total.json  DE_total.json  DJ_timeline.json  DK_total.json  DZ_timeline.json  ES_total.json  FR_total.json  GB_total.json  GF_timeline.json  GF_total.json  GH_timeline.json  GM_total.json  GR_total.json  (+68 more)
(+876 files in other folders)
