[tool.poetry]
name = "virustrackerexports"
version = "0.1.0"
description = ""
authors = ["yleprince <yrieix.leprince@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.0"
requests = "^2.23.0"
pandas = "^1.0.3"
gitpython = "^3.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
