[tool.poetry]
name = "virustrackerexports"
version = "0.1.0"
description = ""
authors = ["yleprince <yrieix.leprince@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.23.0"
gitpython = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
